--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@reduxjs/toolkit": "^1.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.30.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
