--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "antd": "^4.20.2",
     "axios": "^0.27.2",
     "i18next": "^21.6.16",
     "react": "^18.1.0",
