--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^4.20.2",
     "axios": "^0.27.2",
     "i18next": "^21.6.16",
+    "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.30.0",
