--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "antd": "^4.20.2",
     "axios": "^0.27.2",
+    "framer-motion": "^6.3.3",
     "i18next": "^21.6.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
