--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i18next": "^21.6.16",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.30.0",
     "react-i18next": "^11.16.7",
@@ -60,6 +61,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "eslint": "^8.14.0",
